force-app/main/default/objects/Hostel__c/fields/Available_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Available_Rooms__c</fullName>
    <label>Available Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>