force-app/main/default/objects/Hostel__c/fields/Hostel_Type__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Type__c</fullName>
    <label>Hostel Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boys Hostel</fullName>
            </value>
            <value>
                <fullName>Girls Hostel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>