force-app/main/default/objects/Hostel__c/fields/Total_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Total_Rooms__c</fullName>
    <label>Total Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>