force-app/main/default/objects/Hostel__c/fields/Warden__c.field-meta.xml
<CustomField>
    <fullName>Warden__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warden</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Hostels</relationshipLabel>
    <relationshipName>Hostels</relationshipName>
    <type>Lookup</type>
</CustomField>